project3/bin/simplejava.java
/* Generated By:JavaCC: Do not edit this line. simplejava.java */
public class simplejava implements simplejavaConstants {

  static final public ASTProgram program() throws ParseException {
        ASTClasses classes = new ASTClasses();
        ASTFunctionDefinitions func_def = new ASTFunctionDefinitions();
        ASTProgram program = new ASTProgram(classes, func_def, 0);
        ASTClass cls;
        ASTFunctionDefinition function;
         System.out.println("starting program parser");
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      cls = singleClass();
                           classes.addElement(cls); System.out.println("added single class");
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      function = functiondef();
                                func_def.addElement(function); System.out.println("added funcDef");
    }
    jj_consume_token(0);
           {if (true) return program;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionDefinition functiondef() throws ParseException {
        Token type; Token name;
        ASTFormals fmls = new ASTFormals();
        ASTStatement body;
         System.out.println("starting functiondef");
    type = jj_consume_token(IDENTIFIER);
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(LEFTPARENTHESIS);
    fmls = formals();
    jj_consume_token(RIGHTPARENTHESIS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
                          {if (true) return new ASTPrototype(type.image, name.image, fmls, type.beginLine);}
      break;
    case FOR:
    case LEFTBRACE:
    case DO:
    case WHILE:
    case IF:
    case RETURN:
    case IDENTIFIER:
      body = stmt();
                             {if (true) return new ASTFunction(type.image, name.image, fmls, body, type.beginLine);}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//fix similar to actuals*************
  static final public ASTFormals formals() throws ParseException {
        Token type; Token name;
        ASTFormals list = new ASTFormals();
        int arrayDimension = 0;
         System.out.println("starting formals");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      type = jj_consume_token(IDENTIFIER);
      name = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFTBRACKET:
        jj_consume_token(LEFTBRACKET);
        jj_consume_token(RIGHTBRACKET);
                                                                                 arrayDimension++;
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
                ASTFormal form = new ASTFormal(type.image, name.image, arrayDimension, type.beginLine);
                list.addElement(form);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      type = jj_consume_token(IDENTIFIER);
      name = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFTBRACKET:
        jj_consume_token(LEFTBRACKET);
        jj_consume_token(RIGHTBRACKET);
                                                                                             arrayDimension++;
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
                ASTFormal form = new ASTFormal(type.image, name.image, arrayDimension, type.beginLine);
                list.addElement(form);
    }
                {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  static final public void actuals(ASTFunctionCallExpression fcall) throws ParseException {
  ASTExpression e;
    e = exp();
                    fcall.addElement(e);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      e = exp();
                                                                fcall.addElement(e);
    }
  }

  static final public ASTClass singleClass() throws ParseException {
        Token name; ASTInstanceVariableDefs vars;
         System.out.println("starting singleClass");
    jj_consume_token(CLASS);
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(LEFTBRACE);
    vars = varDefs();
    jj_consume_token(RIGHTBRACE);
                {if (true) return new ASTClass(name.image, vars, name.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTInstanceVariableDefs varDefs() throws ParseException {
        ASTInstanceVariableDefs varDefs = new ASTInstanceVariableDefs();
        Token type; Token name;
        int arrayCount = 0;
         System.out.println("starting varDefs");
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      type = jj_consume_token(IDENTIFIER);
      name = jj_consume_token(IDENTIFIER);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LEFTBRACKET:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_6;
        }
        jj_consume_token(LEFTBRACKET);
        jj_consume_token(RIGHTBRACKET);
      }
                                                                                   arrayCount++;
      jj_consume_token(SEMICOLON);
                ASTInstanceVariableDef var = new ASTInstanceVariableDef(type.image, name.image, arrayCount, type.beginLine);
                varDefs.addElement(var);
    }
              {if (true) return varDefs;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression exp() throws ParseException {
        ASTExpression e1; ASTExpression e2; Token t;
         System.out.println("starting exp");
    e1 = exp1();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_7;
      }
      t = jj_consume_token(OR);
      e2 = exp1();
                                            e1 = new ASTOperatorExpression(e1, e2, 6, t.beginLine);
    }
          {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression exp1() throws ParseException {
        ASTExpression e1; ASTExpression e2; Token t;
         System.out.println("starting exp1");
    e1 = exp2();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_8;
      }
      t = jj_consume_token(AND);
      e2 = exp2();
                                         e1 = new ASTOperatorExpression(e1, e2, 5, t.beginLine);
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression exp2() throws ParseException {
        ASTExpression e1; ASTExpression e2; Token t;
         System.out.println("starting exp2");
    e1 = exp3();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS:
      case NOT_EQUAL:
      case LESS_THAN:
      case GREATER_THAN:
      case LESS_EQUAL:
      case GREATER_EQUAL:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS:
        t = jj_consume_token(EQUALS);
        break;
      case NOT_EQUAL:
        t = jj_consume_token(NOT_EQUAL);
        break;
      case LESS_THAN:
        t = jj_consume_token(LESS_THAN);
        break;
      case LESS_EQUAL:
        t = jj_consume_token(LESS_EQUAL);
        break;
      case GREATER_THAN:
        t = jj_consume_token(GREATER_THAN);
        break;
      case GREATER_EQUAL:
        t = jj_consume_token(GREATER_EQUAL);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = exp3();
          e1 = new ASTOperatorExpression(e1, e2, t.image, t.beginLine);
    }
                                                                              {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression exp3() throws ParseException {
        ASTExpression e1, e2;
        Token t;
        int op;
         System.out.println("starting exp3");
    e1 = exp4();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
      case PLUS:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
                                   op = 1;
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
                                                             op = 2;
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = exp4();
          e1 =  new ASTOperatorExpression(e1, e2, op, t.beginLine);
    }
                                                                          {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression exp4() throws ParseException {
        ASTExpression e1 = null; ASTExpression e2; Token t;
        int op;
         System.out.println("starting exp4");
    e1 = exp5();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
        t = jj_consume_token(TIMES);
                                    op = 3;
        break;
      case DIVIDE:
        t = jj_consume_token(DIVIDE);
                                                               op = 4;
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = exp5();
          e1 = new ASTOperatorExpression(e1, e2, op, t.beginLine);
    }
                                                                         {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression exp5() throws ParseException {
        Token t; Token t2;
        ASTExpression e;
        ASTBaseVariable var;
        ASTFunctionCallExpression fCall;
        int dimm = 0;
        Token val = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFTPARENTHESIS:
         System.out.println("starting exp5");
      jj_consume_token(LEFTPARENTHESIS);
      e = exp();
      jj_consume_token(RIGHTPARENTHESIS);
                                                     {if (true) return e;}
      break;
    case NEW:
      jj_consume_token(NEW);
      t = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFTPARENTHESIS:
        jj_consume_token(LEFTPARENTHESIS);
        jj_consume_token(RIGHTPARENTHESIS);
                                                                            {if (true) return new ASTNewClassExpression(t.image, t.beginLine);}
        break;
      case LEFTBRACKET:
        jj_consume_token(LEFTBRACKET);
        val = jj_consume_token(INTEGER_LITERAL);
        jj_consume_token(RIGHTBRACKET);
                                                                           dimm++;
        label_12:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LEFTBRACKET:
            ;
            break;
          default:
            jj_la1[18] = jj_gen;
            break label_12;
          }
          jj_consume_token(LEFTBRACKET);
          jj_consume_token(RIGHTBRACKET);
                                                                                                                      dimm++;
        }
                        ASTIntegerLiteral v = new ASTIntegerLiteral(Integer.parseInt(val.image), t.beginLine);
                        {if (true) return new ASTNewArrayExpression(t.image, v, dimm, t.beginLine);}
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFTPARENTHESIS:
        jj_consume_token(LEFTPARENTHESIS);
                                                  fCall = new ASTFunctionCallExpression(t.image, t.beginLine);
        actuals(fCall);
        jj_consume_token(RIGHTPARENTHESIS);
                                                    {if (true) return fCall;}
        break;
      default:
        jj_la1[20] = jj_gen;
                  var = new ASTBaseVariable(t.image, t.beginLine); {if (true) return new ASTVariableExpression(var, t.beginLine);}
      }
      break;
    case INTEGER_LITERAL:
      t = jj_consume_token(INTEGER_LITERAL);
                                {if (true) return new ASTIntegerLiteral(Integer.parseInt(t.image), t.beginLine);}
      break;
    case TRUE:
      t = jj_consume_token(TRUE);
                             {if (true) return new ASTBooleanLiteral(Boolean.parseBoolean(t.image), t.beginLine);}
      break;
    case FALSE:
      t = jj_consume_token(FALSE);
                              {if (true) return new ASTBooleanLiteral(Boolean.parseBoolean(t.image), t.beginLine);}
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement stmt() throws ParseException {
        Token t; Token t2; ASTIntegerLiteral i;
        ASTVariableExpression ex; ASTOperatorExpression op;
        ASTStatement s;
        ASTStatements stmts;
        ASTExpression e;
        ASTAssignmentStatement as;
        ASTReturnStatement ret;
        ASTArrayVariable arr;
        ASTClassVariable cls;
        ASTVariable base; ASTVariable v;
        ASTFunctionCallStatement fCall;
        int dim = 0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFTBRACE:
         System.out.println("starting stmt");
      jj_consume_token(LEFTBRACE);
                      stmts = new ASTStatements();
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case LEFTBRACE:
        case DO:
        case WHILE:
        case IF:
        case RETURN:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_13;
        }
        s = stmt();
                                                                   stmts.addElement(s);
      }
      jj_consume_token(RIGHTBRACE);
                                                                                                           {if (true) return stmts;}
      break;
    case RETURN:
      jj_consume_token(RETURN);
      e = exp();
      jj_consume_token(SEMICOLON);
                                            ret = new ASTReturnStatement(e, e.line()); {if (true) return ret;}
      break;
    case FOR:
      s = forState();
                         {if (true) return s;}
      break;
    case WHILE:
      s = whileState();
                          {if (true) return s;}
      break;
    case DO:
      s = doWhileState();
                            {if (true) return s;}
      break;
    case IF:
      s = ifState();
                       {if (true) return s;}
      break;
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
                          base = new ASTBaseVariable(t.image, t.beginLine);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        t2 = jj_consume_token(IDENTIFIER);
        jj_consume_token(SEMICOLON);
                        {if (true) return new ASTVariableDefStatement(t.image, t2.image, t.beginLine);}
        break;
      case LEFTPARENTHESIS:
        jj_consume_token(LEFTPARENTHESIS);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RIGHTPARENTHESIS:
          jj_consume_token(RIGHTPARENTHESIS);
          jj_consume_token(SEMICOLON);
                                                               {if (true) return new ASTFunctionCallStatement(t.image, t.beginLine);}
          break;
        case LEFTPARENTHESIS:
        case TRUE:
        case FALSE:
        case NEW:
        case INTEGER_LITERAL:
        case IDENTIFIER:
          e = exp();
                              fCall = new ASTFunctionCallStatement(t.image, e, t.beginLine);
          label_14:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case COMMA:
              ;
              break;
            default:
              jj_la1[23] = jj_gen;
              break label_14;
            }
            jj_consume_token(COMMA);
            e = exp();
                                                                                                                    fCall.addElement(e);
          }
          break;
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case PLUS:
      case LEFTBRACKET:
        label_15:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LEFTBRACKET:
            ;
            break;
          default:
            jj_la1[25] = jj_gen;
            break label_15;
          }
          jj_consume_token(LEFTBRACKET);
          e = exp();
          jj_consume_token(RIGHTBRACKET);
                                                   dim++; arr = new ASTArrayVariable(base, e, t.beginLine);
        }
        jj_consume_token(PLUS);
        jj_consume_token(PLUS);
        jj_consume_token(SEMICOLON);
                        i = new ASTIntegerLiteral(1, t.beginLine);
                        v = new ASTBaseVariable(t.image, t.beginLine);
                        ex = new ASTVariableExpression(v, t.beginLine);
                                op = new ASTOperatorExpression(ex, i, 2, t.beginLine);
                                as = new ASTAssignmentStatement(v, op, t.beginLine);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        jj_consume_token(MINUS);
        jj_consume_token(SEMICOLON);
                                i = new ASTIntegerLiteral(1, t.beginLine);
                        v = new ASTBaseVariable(t.image, t.beginLine);
                        ex = new ASTVariableExpression(v, t.beginLine);
                                op = new ASTOperatorExpression(ex, i, 3, t.beginLine);
                                as = new ASTAssignmentStatement(v, op, t.beginLine);
        break;
      case ASSIGN:
        jj_consume_token(ASSIGN);
        e = exp();
        jj_consume_token(SEMICOLON);
                                                    {if (true) return new ASTAssignmentStatement(base, e, t.beginLine);}
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
